add index.html and css files

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,26 +7,24 @@
     <body>
         <div id="all-contents">
             <nav>
-                <h1>Allea's stipid wedstite</h1>
+                <h1>Sheba's Glorious Website</h1>
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
                  </li>
                  <li class="nav-li">
-                    <a class="nav-a" href="portfolio.html">Portfolio</a>
-                    </li>
-                <ul id="portfolio">
-
-                </ul>
-           </nav>
-           <main>
+                   <a class="nav-a" href="portfolio.html">Portfolio</a>
+                 </li>
+             </ul>
+         </nav>
+         <main>
             <div class="content">
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
-
+                    <img src="ab9cf82e0b4289f53981250b38343feb.png">
                 </ul>
             </div>
-          </main>
-        </div>
+        </main>
+     </div>
     </body>
 </html>
