--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,11 @@
          <main>
             <div class="content">
                 <h1>Portfolio</h1>
+                
                 <ul id="portfolio">
-                    <img src="ab9cf82e0b4289f53981250b38343feb.png">
+                    <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
+                    <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
+                    <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                 </ul>
             </div>
         </main>
