--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,7 @@
 
     <body>
         <div id="all-contents">
-            <nav>
-                <h1>Sheba's Glorious Website</h1>
+            <nav>Allea's stupid wedsite</h1>
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
@@ -20,7 +19,7 @@
          <main>
             <div class="content">
                 <h1>Portfolio</h1>
-                
+
                 <ul id="portfolio">
                     <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
