--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,15 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Allea's stipid wedsite</title>
+        <title>Allea's Stupid Website</title>
+        <link rel="stylesheet" href="style.css">
+        
     </head>
 
     <body>
-        <div id="all-contents">
-            <nav>Allea's stupid wedsite</h1>
+      <div id="all-contents">
+            <nav>
+                <h1>Allea's Stupid Website</h1>
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
@@ -16,10 +19,9 @@
                  </li>
              </ul>
          </nav>
-         <main>
+        <main>
             <div class="content">
                 <h1>Portfolio</h1>
-
                 <ul id="portfolio">
                     <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
@@ -27,6 +29,6 @@
                 </ul>
             </div>
         </main>
-     </div>
+      </div>
     </body>
 </html>
